# datamlang

./: .gitignore  CMakeLists.txt  DataMLTranspiler.js  README.md  binding.gyp  index.js  package-lock.json  package.json  test.js
.github/workflows/: node.js.yml
constants/: Aliases.h
include/: Alias.h  ElseCondition.h  Function.h  IfAndElifCondition.h  KeyWord.h  Loop.h  Parser.h  StringUtils.h  Transpiler.h
src/: Alias.cc  Aliases.cc  ElseCondition.cc  Error.cc  Function.cc  IfAndElifCondition.cc  KeyWord.cc  Loop.cc  Parser.cc  StringUtils.cc  Transpiler.cc  dataTranspiler.cc
